[rs-dam] Sonar
Former-commit-id: 20788b3a9fa13545d2403893eaef7a5fe5a4f48b